# eval

./: .gitignore  pyproject.toml
analysis/: README.md  __init__.py  analyze.py  analyzer.py  export_files.py
docs_annotation/: .env.example  .gitignore  README.md  batch_annotate.py  main.py  requirements.txt  test_one.py
docs_annotation/logs/: .gitignore  README.md
docs_annotation/src/: __init__.py  service.py
docs_annotation/src/core/: __init__.py  base.py  logger.py  pipeline.py  schema.py
docs_annotation/src/models/: __init__.py  llm.py  ocr.py
docs_annotation/src/processors/: __init__.py  doc_parser.py  docling_parser.py  element_detector.py  feature_extractor.py  layout_classifier.py
docs_annotation/test/: README.md  __init__.py  create_test_docs.py  run_all_tests.py  run_specific_tests.py  test_chart_detection.py  test_cross_page_table.py  test_parser_comparison.py  test_table_detection.py
mock_query/: README.md  config.example.json  generate_queries.py  templates_hr.json
mock_query/mock_annotations/: hr_policy_excel1.json  hr_policy_pdf1.json  hr_report_pdf2.json
reference/plan/: rag评估方案.md
