[project]
name = "eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.77.1",
    "beautifulsoup4>=4.14.3",
    "docling>=2.72.0",
    "hf-xet>=1.2.0",
    "openai>=2.16.0",
    "openpyxl>=3.1.5",
    "paddleocr>=2.10.0",
    "pdfplumber>=0.11.9",
    "pillow>=10.0.0,<12.0.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "python-pptx>=1.0.2",
    "pyyaml>=6.0.3",
]
